!2345 fix(#I4RULJ):  update margin-left make dropdown align center * doc: 更新示例 * style: 微调样式居中对齐 * Merge branch 'main' into dev-widget * chore: 更新  Widget 样式 * doc: 更新文档修复丢失的 Header 内容

--- a/src/BootstrapBlazor/Components/DropdownWidget/DropdownWidget.css
+++ b/src/BootstrapBlazor/Components/DropdownWidget/DropdownWidget.css
@@ -1,7 +1,8 @@
 ﻿.widget .dropdown-toggle {
     color: #fff;
-    padding: 14px 15px;
+    padding: 10px 16px;
     position: relative;
+    display: inline-block;
 }
 
     .widget .dropdown-toggle:after {
@@ -17,7 +18,7 @@
 .widget .dropdown-menu {
     overflow: visible;
     width: 235px;
-    margin-left: -96px !important;
+    margin-left: -94px !important;
     padding: 0;
     max-height: none;
     border: none;
